8351839: RISC-V: Fix base offset calculation introduced in JDK-8347489